--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.example.ml_accelerometer.fileprovider"
+            android:authorities="com.example.ML_Accelerometer.fileprovider"
             android:grantUriPermissions="true"
             android:exported="false">
             <meta-data
